# literature-automation-system

./: .env.example  .gitignore  README.md  conftest.py  plan.md  pyproject.toml  run_index.py  run_mineru.py
prompts/: chinese.json  default.json  evidence_auditor.json  literature_review.json  scientific_research.json  strict_citation.json
src/lcr/: config.py  types.py  utils.py
src/lcr/api/: server.py
src/lcr/api/static/: index.html
src/lcr/citation/: citation_map.py
src/lcr/generation/: evidence_auditor.py
src/lcr/ingest/: auto_tagger.py  chroma_ingestor.py  mineru_chunker.py  mineru_parser.py  normalizer.py  zotero.py
src/lcr/retrieval/: chroma_retriever.py
src/lcr/validation/: structural.py
tests/: test_citation_map.py  test_ingest.py  test_mineru_parser.py  test_retriever_safety.py  test_structural.py  test_types.py
