[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "literature-citation-rag"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "paper-qa>=5",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sentence-transformers>=2.7",
    "lmdb>=1.4",
    "pyzotero>=1.5",
    "httpx>=0.27",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "mypy>=1.9"]

[tool.setuptools.packages.find]
where = ["src"]
